syntax = "proto3";

option go_package = "./ProtoMsg";

enum CMD_SERVICE {
  INIT_SERVICE = 0;
  G2S_DATA_TRANSFER = 20003;
  S2G_DATA_TRANSFER = 20004;
}

message G2S_DataTransfer {
  uint32 ConnId = 1;
  int32 MsgID = 2;
  bytes Data = 3;
}

message S2G_DataTransfer {
  uint32 ConnId = 1;
  int32 MsgID = 2;
  bytes Data = 3;
}

enum CMD_GAME {
  INIT_GAME = 0;
  PING = 1001;
  PONG = 1002;
}

message C2S_Ping {
  int32 Ping = 1;
}

message S2C_Pong {
  int32 Pong = 2;
}